<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:background="#F9F8F6"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.RegisterActivity">

    <ImageView
        android:id="@+id/pawIcon2"
        android:layout_width="75dp"
        android:layout_height="68dp"
        android:contentDescription="@string/paw_icon_desc"
        android:elevation="8dp"
        android:src="@drawable/paw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:text="@string/register"
        android:textColor="#3A2525"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pawIcon2" />

    <EditText
        android:id="@+id/email"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/text_border"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:gravity="center_vertical"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="49dp"
        android:paddingStart="50dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="#3A2525"
        android:textColorHint="#8A8A8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/name"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="name"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:background="@drawable/text_border"
        android:gravity="center_vertical"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:paddingStart="50dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="#3A2525"
        android:textColorHint="#8A8A8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView5" />

    <EditText
        android:id="@+id/address"
        android:layout_width="294dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="postalAddress"
        android:background="@drawable/text_border"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:gravity="center_vertical"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:minHeight="40dp"
        android:paddingStart="50dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="#3A2525"
        android:textColorHint="#8A8A8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/username"
        android:layout_width="293dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="username"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:background="@drawable/text_border"
        android:gravity="center_vertical"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:minHeight="50dp"
        android:paddingStart="50dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="#3A2525"
        android:textColorHint="#8A8A8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <EditText
        android:id="@+id/password"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/text_border"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="49dp"
        android:paddingStart="50dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:textColor="#3A2525"
        android:textColorHint="#8A8A8A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signup"
        android:layout_width="173dp"
        android:layout_height="59dp"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:text="@string/signup"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:backgroundTint="#A18D6D"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.845"
        app:strokeColor="#3A2525"
        app:strokeWidth="3dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_nav_signin"
        android:layout_width="82dp"
        android:layout_height="41dp"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:padding="0dp"
        android:text="Login"
        android:textColor="#A18D6D"
        android:textSize="20sp"
        app:backgroundTint="@android:color/transparent"
        app:cornerRadius="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo_tammudu_regular"
        android:text="@string/already_account"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918" />

</androidx.constraintlayout.widget.ConstraintLayout>